# Toolkit

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build-native-bridge.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tun2socks_bridge.cpp  tunbridge_stub.cpp
app/src/main/cpp/include/: tunbridge.h
app/src/main/go/tunbridge/: README.md  bridge.h  build-android.ps1  build-android.sh  go.mod  main.go  protect_callback.c  sync-native-bridge.ps1  sync-native-bridge.sh
app/src/main/java/com/apidebug/inspector/: InspectorApplication.kt  MainActivity.kt
app/src/main/java/com/apidebug/inspector/capture/: CaptureModels.kt  PacketParser.kt  TunSessionManager.kt  TunnelPacketRouter.kt  VpnCaptureController.kt  VpnCaptureService.kt
app/src/main/java/com/apidebug/inspector/core/: RootCommandExecutor.kt  RootRedirectManager.kt
app/src/main/java/com/apidebug/inspector/data/: InspectorDatabaseHelper.kt  Repositories.kt
app/src/main/java/com/apidebug/inspector/export/: SessionExporter.kt
app/src/main/java/com/apidebug/inspector/models/: Models.kt
app/src/main/java/com/apidebug/inspector/nativebridge/: Tun2SocksBridge.kt
app/src/main/java/com/apidebug/inspector/network/: ProtectedSocketFactory.kt  RequestEngine.kt  RuleEngine.kt
app/src/main/java/com/apidebug/inspector/proxy/: LocalDebugProxyServer.kt  ProxyModels.kt
app/src/main/java/com/apidebug/inspector/tls/: TlsModels.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
docs/: native-tun-bridge.md
(+6 files in other folders)
